# django-rest-enterprise

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.project_name}}/config/: __init__.py  asgi.py  features.yaml  wsgi.py  {% if cookiecutter.use_celery.lower() == 'y' %}celery.py{% endif %}
{{cookiecutter.project_name}}/config/settings/: base.py  development.py  production.py  test.py
{{cookiecutter.project_name}}/core/: models.py
{{cookiecutter.project_name}}/core/authentication/: jwt_auth.py
{{cookiecutter.project_name}}/core/exceptions/: base_exceptions.py
{{cookiecutter.project_name}}/core/mixins/: auth_mixin.py
{{cookiecutter.project_name}}/core/utils/: features.py
{{cookiecutter.project_name}}/deployment/dev/: docker-compose-dev.yml
{{cookiecutter.project_name}}/deployment/production/: docker-compose.yml
{{cookiecutter.project_name}}/deployment/production/docker/: Django.Dockerfile
{{cookiecutter.project_name}}/modules/authentication/application/: usecases.py
{{cookiecutter.project_name}}/modules/authentication/domain/: services.py
{{cookiecutter.project_name}}/modules/authentication/infrastructure/: backends.py  serializers.py
{{cookiecutter.project_name}}/modules/authentication/tests/: test_auth_api.py
{{cookiecutter.project_name}}/modules/users/application/: commands.py
{{cookiecutter.project_name}}/modules/users/domain/: entities.py
{{cookiecutter.project_name}}/modules/users/infrastructure/: models.py  repositories.py  serializers.py
{{cookiecutter.project_name}}/requirements/: base.txt  prod.txt
{{cookiecutter.project_name}}/scripts/: init_db.sh  seed.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/config/: __init__.py  features.yaml  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  development.py
{{cookiecutter.project_slug}}/core/: db_router.py
{{cookiecutter.project_slug}}/core/authentication/: decorators.py
{{cookiecutter.project_slug}}/core/utils/: features.py  response.py
{{cookiecutter.project_slug}}/deployment/production/: docker-compose.yml
{{cookiecutter.project_slug}}/deployment/production/docker/: Celery.Dockerfile  Redis.Dockerfile
{{cookiecutter.project_slug}}/deployment/production/nginx/: nginx.conf
{{cookiecutter.project_slug}}/modules/authentication/: apps.py
{{cookiecutter.project_slug}}/modules/authentication/presentation/: urls.py
{{cookiecutter.project_slug}}/modules/authentication/presentation/api/: urls.py
{{cookiecutter.project_slug}}/modules/users/: apps.py
{{cookiecutter.project_slug}}/modules/users/application/: queries.py
{{cookiecutter.project_slug}}/modules/users/infrastructure/: serializers.py
{{cookiecutter.project_slug}}/modules/users/presentation/: urls.py
{{cookiecutter.project_slug}}/modules/users/presentation/api/: urls.py
{{cookiecutter.project_slug}}/modules/users/tests/: test_users_api.py
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt
(+4 files in other folders)
