[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Enterprise Django REST project template"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "{{cookiecutter.project_name}}" }
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

django = "^5.0"
djangorestframework = "^3.15"
drf-spectacular = "^0.27.0"

psycopg2-binary = "^2.9"
PyJWT = "^2.9"
python-dotenv = "^1.0"

celery = "^5.3"
redis = "^5.0"

# Optional — for production
gunicorn = { version = "^21.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13"
flake8 = "^7.0"
pytest = "^8.0"
pytest-django = "^4.8"
pytest-cov = "^5.0"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#############################################
#  Dev Tools Configuration (Unified Config) #
#############################################

# ---- BLACK ----
[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
exclude = '''
(
    migrations
  | venv
  | __pycache__
  | static
  | media
)
'''

# ---- ISORT ----
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip = ["migrations", "venv", "__pycache__", "static", "media"]

# ---- FLAKE8 ----
[tool.flake8]
max-line-length = 120
ignore = [
    "E203",  # black compatibility
    "W503",  # black compatibility
]
exclude = [
    "migrations",
    "venv",
    "__pycache__",
    "static",
    "media"
]

# ---- PYTEST ----
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{cookiecutter.project_name}}.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=term-missing"

# ---- PRE-COMMIT ----
[tool.pre-commit]
repos = [
  { repo = "https://github.com/psf/black", rev = "24.1.1", hooks = [{ id = "black" }] },
  { repo = "https://github.com/PyCQA/isort", rev = "5.13.2", hooks = [{ id = "isort" }] },
  { repo = "https://github.com/PyCQA/flake8", rev = "7.0.0", hooks = [{ id = "flake8" }] },
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0",
    hooks = [
      { id = "check-yaml" },
      { id = "end-of-file-fixer" },
      { id = "trailing-whitespace" }
    ]
  }
]
